--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,10 @@
+.img_circular{
+    width: 130px;
+    height: 130px;
+    borderRadius: 100%;
+    object-fit: cover;
+}
+
 .porcentaje-descuento {
     height: 45px;
     width: 45px;
